Parameterize dbuilds on Scala version.

--- a/bin/dbuild.properties
+++ b/bin/dbuild.properties
@@ -13,6 +13,7 @@
 [repositories]
   local
   maven-central
+  m2repo: file://${maven.local.repo-${user.dir}/m2repo}
   sonatype-snapshots: https://oss.sonatype.org/content/repositories/snapshots
   java-annoying-cla-shtuff: http://download.java.net/maven/2/
   typesafe-releases: http://typesafe.artifactoryonline.com/typesafe/releases
