Fixes #4 - Flexibility for the IDE to external change stuff.
* We bump to a hacked release of dbuild with less strict build rules
  and worse errors on misconfiguratoins.
* We add a globals section to each build with variables we pull from
  the environment, but also include defaults.
* We can most likely remove the sbt-on-2.10.2 build and just
  control that sucker via enviornment properties on the 2.10.x build
  if we really want to.

  Quick look-over from @dragos, pls.

--- a/bin/dbuild.properties
+++ b/bin/dbuild.properties
@@ -5,13 +5,14 @@
 [app]
   org: com.typesafe.dbuild
   name: d-build
-  version: 0.6.4
+  version: 0.6.4-josh-hack-1
   class: distributed.build.SbtBuildMain
   cross-versioned: true
   components: xsbti
 
 [repositories]
   local
+  m2repo: file://${maven.local.repo-${user.dir}/m2repo}
   maven-central
   sonatype-snapshots: https://oss.sonatype.org/content/repositories/snapshots
   java-annoying-cla-shtuff: http://download.java.net/maven/2/
