--- a/bin/dbuild.properties
+++ b/bin/dbuild.properties
@@ -5,7 +5,7 @@
 [app]
   org: com.typesafe.dbuild
   name: d-build
-  version: 0.6.4-josh-hack-3
+  version: 0.6.5
   class: distributed.build.SbtBuildMain
   cross-versioned: true
   components: xsbti
