Honor Java prop `prRepoUrl` for maven resolution.
PR validation uses an internal artifactory for build artifacts.
This provides a hook to make dbuild look there.
The default is a duplicate of another repo, so that we don't fail
when prRepoUrl isn't set. I couldn't find a more elegant way.

--- a/bin/dbuild.properties
+++ b/bin/dbuild.properties
@@ -12,6 +12,7 @@
 
 [repositories]
   local
+  pr-scala: ${prRepoUrl-https://oss.sonatype.org/content/repositories/snapshots}
   maven-central
   m2repo: file://${maven.local.repo-${user.dir}/m2repo}
   sonatype-snapshots: https://oss.sonatype.org/content/repositories/snapshots
