--- a/bin/drepo.properties
+++ b/bin/drepo.properties
@@ -5,7 +5,7 @@
 [app]
   org: com.typesafe.dbuild
   name: d-repo
-  version: 0.6.6-test-fd5
+  version: 0.7.0
   class: distributed.repo.core.SbtRepoMain
   cross-versioned: true
   components: xsbti
