--- a/versions.properties
+++ b/versions.properties
@@ -1,4 +1,4 @@
-maven.version.number=2.11.0-SNAPSHOT
+maven.version.number=2.11.0-M7
 
 # the rest of this file comes from https://github.com/scala/scala/raw/master/versions.properties
 starr.version=2.11.0-M7
