--- a/bin/dbuild.properties
+++ b/bin/dbuild.properties
@@ -5,7 +5,7 @@
 [app]
   org: com.typesafe.dbuild
   name: d-build
-  version: 0.7.0
+  version: 0.7.1-M1
   class: distributed.build.SbtBuildMain
   cross-versioned: true
   components: xsbti
