Tweak build for 2.11.0-M8 release.

--- a/versions.properties
+++ b/versions.properties
@@ -1,16 +1,16 @@
-maven.version.number=2.11.0-SNAPSHOT
+maven.version.number=2.11.0-M8
 
 # the rest of this file comes from https://github.com/scala/scala/raw/master/versions.properties
-starr.version=2.11.0-M7
+starr.version=2.11.0-M8
 starr.use.released=1
 
 # These are the versions of the modules that go with this release.
 # These properties are used during PR validation and in dbuild builds.
-scala.binary.version=2.11.0-M7
+scala.binary.version=2.11.0-M8
 partest.version.number=1.0.0-RC8
 scala-xml.version.number=1.0.0-RC7
 scala-parser-combinators.version.number=1.0.0-RC5
-scalacheck.version.number=1.11.1
+scalacheck.version.number=1.11.2
 
 # TODO: modularize the compiler
 #scala-compiler-doc.version.number=1.0.0-RC1
