Nightly build of sbt vs. nightly build of Scala.

--- a/sbt-0.13.x-on-2.11.x.properties
+++ b/sbt-0.13.x-on-2.11.x.properties
@@ -1,7 +1,7 @@
 # Note: Scala properties come from `version.properties` so we can integrate with the pr validation.
 publish-repo=http://private-repo.typesafe.com/typesafe/ide-2.11
-sbt-version=0.13.2-M1
-sbt-tag=v0.13.2-M1
+sbt-version=0.13.2-SNAPSHOT
+sbt-tag=0.13
 sbt.version.suffix=-for-IDE
 sbt.snapshot.suffix=-SNAPSHOT
 sbt-republish-tag=master
