Fix typo in branch name.

--- a/sbt-on-2.11.x.properties
+++ b/sbt-on-2.11.x.properties
@@ -2,10 +2,10 @@
 publish-repo=http://private-repo.typesafe.com/typesafe/ide-2.11
 # We lie for now so ide build succeeds.
 sbt-version=0.13.0
-sbt-tag=origin/0.13.1-scala-2.11.0-M8
+sbt-tag=sbt-0.13.1-scala-2.11.0-M8
 sbt.version.suffix=-for-IDE
 sbt.snapshot.suffix=-SNAPSHOT
 sbt-republish-tag=master
 zinc-tag=master
 sbinary-tag=2.11
-sbt-build-sbt-version=0.12.4
+sbt-build-sbt-version=0.13.1
