--- a/sbt-on-2.11.x.properties
+++ b/sbt-on-2.11.x.properties
@@ -6,6 +6,6 @@ sbt-tag=sbt-0.13.1-scala-2.11.0-M8
 sbt.version.suffix=-for-IDE
 sbt.snapshot.suffix=-SNAPSHOT
 sbt-republish-tag=master
-zinc-tag=master
+zinc-tag=v0.3.0
 sbinary-tag=2.11
 sbt-build-sbt-version=0.13.1
